--- a/termAnalysis.ipynb
+++ b/termAnalysis.ipynb
@@ -82,7 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "txtDir = \"C:\\\\Users\\\\choosingTerms" # EDIT for your own working directory \n",
+    "# EDIT for your own working directory:\n"
+    "txtDir = \"C:\\\\Users\\\\choosingTerms"\n",
     "nGramRange = (1,4) # minimum unigrams, maximum quadgrams\n",
     "pytrends = TrendReq(hl='en-US', tz=360)\n",
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)"
